# WebglPractices

./: .gitignore  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  rustfmt.toml
src/: lib.rs  router.rs
src/pages/: hello_world.rs  mod.rs  webgl_01_hello.rs  webgl_02_hello_app.rs
src/pages/webgl_01_hello/: mod.rs
src/pages/webgl_02_hello_app/: mod.rs
src/pages/webgl_02_triangle/: mod.rs
src/pages/webgl_02_triangle/shader/: fragment-shader.glsl
src/pages/webgl_03_triangle/: fragment-shader.essl  mod.rs  vertex-shader.essl
src/pages/webgl_03_triangle_lines/: mod.rs
src/pages/webgl_03_triangle_lines/events/: mod.rs
src/pages/webgl_03_triangle_lines/shader/: mod.rs
src/pages/webgl_04_triangle_points/: mod.rs  triangle.rs
src/pages/webgl_04_triangle_points/shader/: vertex-shader.glsl
src/pages/webgl_04_triangle_shader/: mod.rs
src/pages/webgl_04_triangle_shader/shader/: mod.rs  vertex-shader.essl
src/pages/webgl_05_cube/: cube.rs  mod.rs
src/pages/webgl_05_cube/shader/: mod.rs  vertex-shader.glsl
src/pages/webgl_05_triangle_state_assets/: mod.rs
src/pages/webgl_05_triangle_state_assets/assets/: mod.rs
src/pages/webgl_05_triangle_state_assets/shader/: mod.rs
src/pages/webgl_05_triangle_state_assets/state/: viewport.rs
src/pages/webgl_06_camera/: canvas.rs  cube.rs  render.rs
src/pages/webgl_06_camera/shader/: vertex-shader.glsl
src/pages/webgl_06_triangle_lines/: mod.rs
src/pages/webgl_07_light/: cube.rs  mod.rs
src/pages/webgl_07_triangle_points/: mod.rs
src/pages/webgl_08_cube/: mod.rs
(+11 files in other folders)
